Fixed textwrapping issue

--- a/assets/css/app/arm-hpc-2018.scss
+++ b/assets/css/app/arm-hpc-2018.scss
@@ -291,3 +291,6 @@ span.eds-text-bm--fixed {
 #schedule table{
     border-bottom: none;
 }
+.softmerge-inner {
+    white-space: normal;
+}
